--- a/THE DHABA/restaurant/main.html
+++ b/THE DHABA/restaurant/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Dhaba</title>
     <link rel="stylesheet" href="otp.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
